--- a/client/src/components/Modal.css
+++ b/client/src/components/Modal.css
@@ -84,4 +84,17 @@ body.active-modal {
     width:200px;
     height: 40px;
     margin-bottom: 10px;
+    cursor: pointer;
   }
+
+.delete-account-button:hover{
+    background-color: rgb(205, 6, 6);
+}
+
+.close-image{
+    cursor: pointer;
+}
+
+.close-image:hover{
+    background-color: rgb(212, 212, 212);
+}
